--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.0'
+		kotlinVersion = '1.3.10'
 		springBootVersion = '2.1.0.RELEASE'
 		springFrameworkVersion = '5.1.1.RELEASE'
-		igniteVersion = '2.6.0'
+		springFoxVersion = '2.9.2'
+		hibernateVersion = '5.3.7.Final'
 	}
 	repositories {
 		mavenCentral()
@@ -41,32 +42,39 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	ext {
-		igniteVersion = '2.6.0'
+idea {
+	module {
+		excludeDirs += files('work', 'log')
 	}
-	
+}
+
+dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-
-	compile('org.springframework.boot:spring-boot-starter-web') {
-		// Apache Ignite needs H2 version h2-1.4.195
-		exclude group: 'com.h2database'
-	}
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-
-	// Apache Ignite needs H2 version h2-1.4.197
-	compile group: 'com.h2database', name: 'h2', version: '1.4.195'
-
-//	compile('org.springframework.boot:spring-boot-starter-cache')
-//	compile('org.springframework.boot:spring-boot-starter-validation')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-//	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
-
-	compile group: 'org.apache.ignite', name: 'ignite-core', version: igniteVersion
-	compile group: 'org.apache.ignite', name: 'ignite-indexing', version: igniteVersion
-	compile group: 'org.apache.ignite', name: 'ignite-spring', version: igniteVersion
-	compile group: 'org.apache.ignite', name: 'ignite-slf4j', version: igniteVersion
-
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+	compile('org.springframework.boot:spring-boot-starter-validation')
+	compile('org.springframework.boot:spring-boot-starter-cache')
+
+	compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa') {
+		// Support java.time.*
+		exclude group: 'org.hibernate', module: 'hibernate-core'
+	}
+	// Support java.time.*
+	compile group: 'org.hibernate', name: 'hibernate-java8', version: hibernateVersion
+	compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.13.Final'
+	compile group: 'org.hibernate', name: 'hibernate-jcache', version: hibernateVersion
+	compile group: 'org.ehcache', name: 'ehcache', version: '3.6.1'
+	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
+	compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.2'
+
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: springFoxVersion
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springFoxVersion
+	compile group: 'io.springfox', name: 'springfox-bean-validators', version: springFoxVersion
+
+	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
