--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.11'
-		springBootVersion = '2.1.0.RELEASE'
+		kotlinVersion = '1.3.21'
+		springBootVersion = '2.1.2.RELEASE'
 		springFrameworkVersion = '5.1.1.RELEASE'
 		springFoxVersion = '2.9.2'
 		hibernateVersion = '5.3.7.Final'
@@ -13,11 +13,13 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlinVersion"
 	}
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
+apply plugin: 'kotlin-jpa'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -51,20 +53,14 @@ idea {
 dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-	compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.22'
+    compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.22'
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile('org.springframework.boot:spring-boot-starter-cache')
-
-	compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa') {
-		// Support java.time.*
-		exclude group: 'org.hibernate', module: 'hibernate-core'
-	}
-	// Support java.time.*
-	compile group: 'org.hibernate', name: 'hibernate-java8', version: hibernateVersion
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
 	compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.13.Final'
 	compile group: 'org.hibernate', name: 'hibernate-jcache', version: hibernateVersion
 	compile group: 'org.ehcache', name: 'ehcache', version: '3.6.1'
