--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
 	ext {
+		javaVersion = '1.8'
 		kotlinVersion = '1.3.21'
 		springBootVersion = '2.1.2.RELEASE'
 		springFrameworkVersion = '5.1.1.RELEASE'
@@ -26,17 +27,17 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'ru.serdtsev'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = javaVersion
 compileKotlin {
 	kotlinOptions {
 		freeCompilerArgs = ["-Xjsr305=strict"]
-		jvmTarget = "1.8"
+		jvmTarget = javaVersion
 	}
 }
 compileTestKotlin {
 	kotlinOptions {
 		freeCompilerArgs = ["-Xjsr305=strict"]
-		jvmTarget = "1.8"
+		jvmTarget = javaVersion
 	}
 }
 
