--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
 	ext {
 		javaVersion = '1.8'
 		kotlinVersion = '1.3.21'
-		springBootVersion = '2.1.2.RELEASE'
+		springBootVersion = '2.1.3.RELEASE'
 		springFrameworkVersion = '5.1.1.RELEASE'
 		springFoxVersion = '2.9.2'
 		hibernateVersion = '5.3.7.Final'
@@ -62,6 +62,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile('org.springframework.boot:spring-boot-starter-cache')
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
 	compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.13.Final'
 	compile group: 'org.hibernate', name: 'hibernate-jcache', version: hibernateVersion
 	compile group: 'org.ehcache', name: 'ehcache', version: '3.6.1'
