--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ idea {
 dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
+	compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.1.1'
     compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.22'
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 
