--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.27",
     "core-js": "^2.6.5",
+    "jquery": "^1.9.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
