--- a/server/build.gradle
+++ b/server/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'ru.serdtsev'
+group = 'ru.serdtsev.zenorger'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = javaVersion
 compileKotlin {
