--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
 		javaVersion = '1.8'
-		kotlinVersion = '1.3.21'
+		kotlinVersion = '1.3.41'
 		springBootVersion = '2.1.3.RELEASE'
 		springFrameworkVersion = '5.1.1.RELEASE'
 		springFoxVersion = '2.9.2'
@@ -77,4 +77,8 @@ dependencies {
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
 	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = "5.2.1"
 }
