--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,13 +1,16 @@
 
-apply plugin: 'kotlin-jpa'
+plugins {
+	id 'java'
+	id 'idea'
+	id 'kotlin-jpa'
+}
 
 repositories {
 	mavenCentral()
 }
 
-group = 'ru.serdtsev.zenorger'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = javaVersion
+
 compileKotlin {
 	kotlinOptions {
 		freeCompilerArgs = ["-Xjsr305=strict"]
