--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ buildscript {
     }
 }
 
+group = 'ru.serdtsev.zenorger'
+version = '0.0.1-SNAPSHOT'
+
 apply plugin: 'idea'
-apply plugin: 'eclipse'
 
 subprojects {
     apply plugin: 'kotlin'
