--- a/api/build.gradle
+++ b/api/build.gradle
@@ -30,6 +30,8 @@ idea {
 	}
 }
 
+springBoot { buildInfo() }
+
 dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
