--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,64 @@ group = 'ru.serdtsev.zenorger'
 version = '0.0.1-SNAPSHOT'
 
 apply plugin: 'idea'
+apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'kotlin-jpa'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-subprojects {
-    apply plugin: 'kotlin'
-    apply plugin: 'kotlin-spring'
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
+repositories {
+    mavenCentral()
+}
+
+sourceCompatibility = javaVersion
+
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = javaVersion
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = javaVersion
+    }
+}
+
+idea {
+    module {
+        excludeDirs += files('work', 'log')
+    }
+}
+
+springBoot { buildInfo() }
+
+dependencies {
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    compile("org.jetbrains.kotlin:kotlin-reflect")
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.1.1'
+    compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.22'
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+    compile('org.springframework.boot:spring-boot-starter-validation')
+    compile('org.springframework.boot:spring-boot-starter-cache')
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+    compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.13.Final'
+    compile group: 'org.hibernate', name: 'hibernate-jcache', version: hibernateVersion
+    compile group: 'org.ehcache', name: 'ehcache', version: '3.6.1'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
+    compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.2'
+
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: springFoxVersion
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springFoxVersion
+    compile group: 'io.springfox', name: 'springfox-bean-validators', version: springFoxVersion
+
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
