--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
+    "bootstrap": "^4.3.1",
     "vue": "^2.6.10",
     "axios": "^0.19.2",
     "vue-axios": "^2.1.5"
