--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.4.4",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9",
-    "bootstrap": "^4.3.1",
     "vue": "^2.6.10",
-    "axios": "^0.19.2",
-    "vue-axios": "^2.1.5"
+    "vue-axios": "^2.1.5",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
