--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-bean-validators', version: springFoxVersion
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testCompile 'com.opentable.components:otj-pg-embedded:0.13.3'
+    testCompile 'com.nhaarman:mockito-kotlin:1.6.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
