--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        javaVersion = '11'
+        javaVersion = '1.8'
         kotlinVersion = '1.3.61'
-        springBootVersion = '2.1.11.RELEASE'
+        springBootVersion = '2.2.5.RELEASE'
         springFoxVersion = '2.9.2'
         hibernateVersion = '5.4.10.Final'
     }
@@ -76,13 +76,16 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-jcache', version: hibernateVersion
     compile group: 'org.ehcache', name: 'ehcache', version: '3.6.1'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
-    compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.2'
+    // https://mvnrepository.com/artifact/org.flywaydb/flyway-core
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '6.3.1'
 
     compile group: 'io.springfox', name: 'springfox-swagger2', version: springFoxVersion
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springFoxVersion
     compile group: 'io.springfox', name: 'springfox-bean-validators', version: springFoxVersion
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    // https://mvnrepository.com/artifact/io.zonky.test/embedded-database-spring-test
+    testCompile group: 'io.zonky.test', name: 'embedded-database-spring-test', version: '1.5.3'
     testCompile 'com.opentable.components:otj-pg-embedded:0.13.3'
     testCompile 'com.nhaarman:mockito-kotlin:1.6.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
