--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.12.9",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-clamp": "^0.3.0",
     "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
